--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,35 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "root/*": [
+        "./src/*"
+      ],
+      "app": [
+        "./src/app"
+      ],
+      "processes/*": [
+        "./src/processes/*"
+      ],
+      "pages/*": [
+        "./src/pages/*"
+      ],
+      "widgets/*": [
+        "./src/widgets/*"
+      ],
+      "features/*": [
+        "./src/features/*"
+      ],
+      "shared/*": [
+        "./src/shared/*"
+      ],
+      "entities/*": [
+        "./src/entities/*"
+      ]
+    },
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ESNext"
-    ],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
@@ -20,12 +43,7 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src"
-  ],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["dist", "public", "node_modules"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
