--- a/package.json
+++ b/package.json
@@ -9,20 +9,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.21.0",
     "classnames": "^2.3.2",
     "effector": "^22.8.6",
     "effector-react": "^22.5.3",
-    "normalizecss": "^3.0.0",
+    "immer": "^9.0.21",
+    "postcss-import": "^15.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-immer": "^0.8.1"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
@@ -36,7 +44,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.6.4",
     "vite": "^4.3.0"
   },
