--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,5 @@
 VITE_API_BASE_URL="https://api.io"
 LOCAL_HOST=0.0.0.0
+
+# victor.k@digitalbutlers.team
+VITE_YANDEX_DICT_API_KEY=dict.1.1.20230608T110658Z.1599edff2551d46e.bc32549eb88e0f4a8db54e926b3c38cd39b160d8
