feat: Added check words

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -165,7 +165,8 @@
       {
         "vars": "all",
         "args": "after-used",
-        "varsIgnorePattern": "React"
+        "varsIgnorePattern": "React",
+        "argsIgnorePattern": "^_$" // ignore "_"
       }
     ],
     "max-len": [
